Стилизация всех страниц

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,35 @@
-// Начните писать стили здесь
+
+@import "css/style.css";
+
+
+@import "page.scss";
+@import "page-header.scss";
+@import "main-nav.scss";
+@import "page-main.scss";
+@import "text.scss";
+@import "desc.scss";
+@import "slider-review.scss";
+@import "table-slider.scss";
+@import "contacts.scss";
+@import "page-footer.scss";
+@import "competition.scss";
+@import "form.scss";
+@import "important.scss";
+@import "galery.scss";
+@import "newphoto.scss";
+
+
+.page__body{
+  background-position: top center;
+  min-height: 100%;
+  background-color:#FFFFFF;
+  font-family: 'Open Sans', sans-serif;
+  width: 320px;
+  min-height: 100%;
+  margin: 0 auto;
+  height: auto;
+}
+
+.visually-hidden{
+  display: none;
+}
