Стилизация всех страниц

--- a/source/sass/competition.scss
+++ b/source/sass/competition.scss
@@ -1,22 +1,21 @@
-.competition__text{
-  background-image:url(..//img/backmobile.jpg);
+.competition__text {
+  background-image: url(..//img/backmobile.jpg);
 }
 
 
-.competition__text-title{
+.competition__text-title {
   padding-top: 120px;
   padding-bottom: 51px;
   padding-left: 46px;
-  padding-left: 46px;
-  color:#FFFFFF;
+  color: #ffffff;
   font-weight: 300;
   font-size: 24px;
   line-height: 33px;
   margin: 0;
 }
 
-.competition__text-subtitle{
-  background-color:#FFFFFF;
+.competition__text-subtitle {
+  background-color: #ffffff;
   margin: 0;
   padding-top: 64px;
   padding-left: 20px;
