--- a/source/sass/contacts.scss
+++ b/source/sass/contacts.scss
@@ -1,5 +1,5 @@
-.contacts__text{
-  color:#283645;
+.contacts__text {
+  color: #283645;
   font-weight: 300;
   font-size: 24px;
   line-height: 28,8px;
@@ -9,8 +9,8 @@
   padding-left: 49px;
 }
 
-.contacts__title{
-  color:#080808;
+.contacts__title {
+  color: #080808;
   font-weight: 700;
   font-size: 18px;
   text-decoration: none;
@@ -21,8 +21,9 @@
   flex-direction: row;
   justify-content: center;
 }
-.contacts__subtitle{
-  color:#D22856;
+
+.contacts__subtitle {
+  color: #d22856;
   font-weight: 300;
   font-size: 24px;
   text-decoration: none;
@@ -34,7 +35,7 @@
   justify-content: center;
 }
 
-.contacts__svg{
+.contacts__svg {
   position: relative;
   top: 39px;
   height: 123px;
