--- a/source/sass/form.scss
+++ b/source/sass/form.scss
@@ -1,18 +1,18 @@
-.form__competition-label{
+.form__competition-label {
   font-weight: 400;
   font-size: 14px;
   line-height: 30px;
-  color:#D22856;
+  color: #d22856;
   text-transform: uppercase;
   padding-left: 43px;
 }
 
-.form__competition-fulname{
+.form__competition-fulname {
   height: 59px;
   width: 276px;
-  border: 2px solid #E5E5E5;
+  border: 2px solid #e5e5e5;
   border-radius: 2px;
-  color:#283645;
+  color: #283645;
   font-weight: 400;
   font-size: 18px;
   line-height: 30px;
@@ -22,14 +22,14 @@
 }
 
 
-.form__checkbox{
-  background-color:#F2F2F2;
+.form__checkbox {
+  background-color: #f2f2f2;
   margin: 0;
   padding: 0;
 }
 
-.form__checkbox-title{
-  color:#D22856;
+.form__checkbox-title {
+  color: #d22856;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
@@ -38,23 +38,23 @@
   text-transform: uppercase;
 }
 
-.form__checkbox-list{
+.form__checkbox-list {
   list-style: none;
   font-weight: 400;
   font-size: 18px;
   line-height: 30px;
-  color:#283645;
+  color: #283645;
 }
 
-.form__contacts-label{
+.form__contacts-label {
   font-weight: 400;
   font-size: 14px;
   line-height: 30px;
-  color:#D22856;
+  color: #d22856;
   text-transform: uppercase;
 }
 
-.form__contacts-text{
+.form__contacts-text {
   border: 2px solid #E5E5E5;
   border-radius: 2px;
   width: 276px;
@@ -63,24 +63,23 @@
   font-size: 18px;
   line-height: 30px;
   padding-left: 20px;
-  color:#283645;
+  color: #283645;
 }
 
-.form__radio-text{
+.form__radio-text {
   outline: 2px solid rgb(255, 94, 0);
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  color: #D22856;
+  color: #d22856;
   text-transform: uppercase;
 }
 
-.form__radio{
-  background-color:#F2F2F2;
+.form__radio {
+  background-color: #f2f2f2;
 }
 
-.form__radio-item{
-  outline: 2px solid rgb(255, 94, 0);
+.form__radio-item {
   list-style: none;
   font-weight: 400;
   font-size: 18px;
@@ -88,35 +87,35 @@
   color: #283645;
 }
 
-.form__review-text{
+.form__review-text {
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  color:#D22856;
+  color: #d22856;
   text-transform: uppercase;
 }
 
-.form__review-desc{
+.form__review-desc {
   font-weight: 400;
   font-size: 18px;
   line-height: 30px;
-  color:#283645;
+  color: #283645;
 }
 
 
-.form__review-textarea{
+.form__review-textarea {
   width: 276px;
   height: 197px;
-  border: 2px solid #E5E5E5;
+  border: 2px solid #e5e5e5;
   border-radius: 2px;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-.form__button-send{
-  background-color:#2AAB6D;
-  color:#FFFFFF;
+.form__button-send {
+  background-color:#2aab6d;
+  color: #ffffff;
   text-transform: uppercase;
   border: none;
   cursor: pointer;
@@ -129,5 +128,4 @@
   line-height: 30px;
   border: 2px solid #606160;
   border-radius: 2px;
-
 }
