--- a/source/sass/desc.scss
+++ b/source/sass/desc.scss
@@ -1,19 +1,19 @@
-.desc{
+.desc {
   margin-top: 123px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color:#F2F2F2;
+  background-color: #f2f2f2;
 }
 
-.desc__title{
-  color:#000000;
+.desc__title {
+  color: #000000;
   font-weight: 700;
   line-height: 24px;
   margin: 0;
   padding: 0;
-  .desc__subtitle{
-    color:#283645;
+  .desc__subtitle {
+    color: #283645;
     font-weight: 400;
     line-height: 24px;
     margin: 0;
