--- a/source/sass/galery.scss
+++ b/source/sass/galery.scss
@@ -1,9 +1,9 @@
-.galery__title{
-  background-image:url(..//img/backmobile.jpg);
+.galery__title {
+  background-image: url(..//img/backmobile.jpg);
   font-weight: 300;
   font-size: 24px;
   line-height: 33px;
-  color: #FFFFFF;
+  color: #ffffff;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -11,15 +11,15 @@
   padding-bottom: 84px;
 }
 
-.galery__text{
-  background-color: #F2F2F2;
+.galery__text {
+  background-color: #f2f2f2;
 }
 
-.galery__text-name{
+.galery__text-name {
   padding-left: 20px;
 }
 
-.galery__subtitle{
+.galery__subtitle {
   font-weight: 400;
   font-size: 14px;
   line-height: 30px;
@@ -28,7 +28,7 @@
   justify-content: center;
 }
 
-.galery__like{
+.galery__like {
   font-size: 12px;
   line-height: 2;
   text-transform: uppercase;
@@ -40,7 +40,6 @@
   padding-left: 20px;
 }
 
-.galery__like-img{
+.galery__like-img {
   padding-right: 18px;
-
 }
