--- a/source/sass/important.scss
+++ b/source/sass/important.scss
@@ -1,9 +1,9 @@
-.important__text{
+.important__text {
   font-weight: 400;
   font-size: 14px;
   line-height: 30px;
   text-transform: uppercase;
-  color:black;
+  color: #000000;
   display: flex;
   flex-direction: row;
   justify-content: center;
