Стилизация всех страниц

--- a/source/sass/competition.scss
+++ b/source/sass/competition.scss
@@ -1,5 +1,5 @@
 .competition__text {
-  background-image: url(..//img/backmobile.jpg);
+  background-image: url("..//img/backmobile.jpg");
 }
 
 .competition__text-title {
