--- a/source/sass/form.scss
+++ b/source/sass/form.scss
@@ -55,7 +55,7 @@
 }
 
 .form__contacts-text {
-  border: 2px solid #E5E5E5;
+  border: 2px solid #e5e5e5;
   border-radius: 2px;
   width: 276px;
   height: 59px;
@@ -67,7 +67,6 @@
 }
 
 .form__radio-text {
-  outline: 2px solid rgb(255, 94, 0);
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
@@ -114,7 +113,7 @@
 }
 
 .form__button-send {
-  background-color:#2aab6d;
+  background-color: #2aab6d;
   color: #ffffff;
   text-transform: uppercase;
   border: none;
@@ -126,6 +125,5 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 30px;
-  border: 2px solid #606160;
   border-radius: 2px;
 }
