--- a/source/sass/galery.scss
+++ b/source/sass/galery.scss
@@ -1,5 +1,5 @@
 .galery__title {
-  background-image: url(..//img/backmobile.jpg);
+  background-image: url("..//img/backmobile.jpg");
   font-weight: 300;
   font-size: 24px;
   line-height: 33px;
