--- a/source/sass/page-main.scss
+++ b/source/sass/page-main.scss
@@ -8,7 +8,7 @@
 }
 
 .page-main__download {
-  color:#FFFFFF;
+  color: #ffffff;
   line-height: 18px;
   text-decoration: none;
   display: flex;
@@ -32,7 +32,7 @@
 .page-main__title {
   font-weight: 300;
   color: #ffffff;
-  line-height: 28,8px;
+  line-height: 29px;
   margin-left: 20px;
   margin-right: 20px;
   margin-bottom: 34px;
