Стилизация всех страниц

--- a/source/sass/page-main.scss
+++ b/source/sass/page-main.scss
@@ -25,7 +25,7 @@
 }
 
 .page-main__wrap {
-  background-image: url(..//img/backmobile.jpg);
+  background-image: url("..//img/backmobile.jpg");
   height: 462px;
 }
 
