--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,7 +18,7 @@
 .page__body {
   background-position: top center;
   min-height: 100%;
-  font-family: 'Open Sans', 'sans-serif';
+  font-family: "Open Sans", "sans-serif";
   width: 320px;
   margin: 0 auto;
   height: auto;
