Стилизация всех страниц

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,9 +16,9 @@
 @import "newphoto.scss";
 
 .page__body {
+  font-family: "Open Sans", sans-serif;
   background-position: top center;
   min-height: 100%;
-  font-family: "Open Sans", "sans-serif";
   width: 320px;
   margin: 0 auto;
   height: auto;
