Moved style page__body to special file

--- a/source/sass/includes/page.scss
+++ b/source/sass/includes/page.scss
@@ -1,3 +1,12 @@
 .page {
   background-color: #ffffff;
 }
+
+.page__body {
+  font-family: "Open Sans", sans-serif;
+  background-position: top center;
+  min-height: 100%;
+  width: 320px;
+  margin: 0 auto;
+  height: auto;
+}
