--- a/source/sass/includes/competition.scss
+++ b/source/sass/includes/competition.scss
@@ -6,7 +6,7 @@
   padding-top: 120px;
   padding-bottom: 51px;
   padding-left: 46px;
-  color: #ffffff;
+  color: $white;
   font-weight: 300;
   font-size: 24px;
   line-height: 33px;
@@ -14,7 +14,7 @@
 }
 
 .competition__text-subtitle {
-  background-color: #ffffff;
+  background-color: $white;
   margin: 0;
   padding-top: 64px;
   padding-left: 20px;
