--- a/source/sass/includes/contacts.scss
+++ b/source/sass/includes/contacts.scss
@@ -23,7 +23,7 @@
 }
 
 .contacts__subtitle {
-  color: #d22856;
+  color: $accent;
   font-weight: 300;
   font-size: 24px;
   text-decoration: none;
