--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 @use "../../node_modules/normalize.css/normalize.css";
 
 @import "common/variables.scss";
@@ -18,3 +19,4 @@
 @import "includes/important.scss";
 @import "includes/galery.scss";
 @import "includes/newphoto.scss";
+/* stylelint-enable */
