--- a/source/sass/blocks/competition.scss
+++ b/source/sass/blocks/competition.scss
@@ -5,7 +5,7 @@
 .competition__text-title {
   padding-top: 120px;
   padding-bottom: 51px;
-  padding-left: 46px;
+  text-align: center;
   color: #ffffff;
   font-weight: 300;
   font-size: 24px;
@@ -17,10 +17,11 @@
   background-color: #ffffff;
   margin: 0;
   padding-top: 64px;
-  padding-left: 20px;
-  padding-right: 20px;
   padding-bottom: 55px;
   font-weight: 400;
   font-size: 14px;
   line-height: 30px;
+  text-align: center;
+  padding-left: 20px;
+  padding-right: 20px;
 }
