--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -7,6 +7,7 @@
   padding: 0;
   padding-right: 49px;
   padding-left: 49px;
+  text-align: center;
 }
 
 .contacts__title {
@@ -20,6 +21,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  text-align: center;
 }
 
 .contacts__subtitle {
@@ -33,6 +35,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  text-align: center;
 }
 
 .contacts__svg {
