--- a/source/sass/blocks/desc.scss
+++ b/source/sass/blocks/desc.scss
@@ -12,12 +12,14 @@
   line-height: 24px;
   margin: 0;
   padding: 0;
-
+  text-align: center;
+  
   .desc__subtitle {
     color: #283645;
     font-weight: 400;
     line-height: 24px;
     margin: 0;
     padding: 0;
+    text-align: center;
   }
 }
