--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -35,7 +35,9 @@
   line-height: 18px;
   padding-left: 51px;
   padding-right: 51px;
+  text-align: center;
   text-transform: uppercase;
+  padding-top: 42px;
 }
 
 .form__checkbox-list {
@@ -72,6 +74,10 @@
   line-height: 18px;
   color: #d22856;
   text-transform: uppercase;
+  text-align: center;
+  padding-left:41px;
+  padding-right:41px;
+  padding-top: 40px;
 }
 
 .form__radio {
@@ -92,6 +98,9 @@
   line-height: 18px;
   color: #d22856;
   text-transform: uppercase;
+  margin: 0;
+  padding-top: 42px;
+  text-align: center;
 }
 
 .form__review-desc {
@@ -107,9 +116,12 @@
   height: 197px;
   border: 2px solid #e5e5e5;
   border-radius: 2px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  margin-left: 22px;
+  margin-right: 22px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
 }
 
 .form__button-send {
@@ -126,4 +138,7 @@
   font-size: 18px;
   line-height: 30px;
   border-radius: 2px;
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
 }
