--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,3 +1,8 @@
+.page-main__img{
+  position: relative;
+  top: 23px;
+}
+
 .page-main__operating {
   background-color: #1d2631;
   display: flex;
@@ -16,6 +21,13 @@
   justify-content: center;
   margin-top: 49px;
   margin-bottom: 59px;
+  padding-top: 21px;
+  padding-bottom: 21px;
+  text-align: center;
+  border: 3px solid #ffffff;
+  box-sizing: border-box;
+  border-radius: 29px;
+  font-weight: bold;
 }
 
 .page-main__operating-system {
@@ -33,9 +45,9 @@
   font-weight: 300;
   color: #ffffff;
   line-height: 29px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 34px;
+  margin: 0;
+  text-align: center;
+  padding-top: 95px;
 }
 
 .page-main__desc {
@@ -45,4 +57,5 @@
   padding: 0;
   margin-top: 31px;
   margin-bottom: 38px;
+  text-align: center;
 }
