--- a/source/sass/blocks/slider-review.scss
+++ b/source/sass/blocks/slider-review.scss
@@ -2,10 +2,12 @@
   color: #000000;
   font-weight: 700;
   line-height: 30px;
+  text-align: center;
 
   .slider-review__subtitle {
     color: #283645;
     font-weight: 400;
     line-height: 30px;
+    text-align: center;
   }
 }
