--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -21,7 +21,6 @@
   margin-right: 20px;
 }
 
-
 .form__checkbox {
   background-color: #f2f2f2;
   margin: 0;
@@ -35,7 +34,9 @@
   line-height: 18px;
   padding-left: 51px;
   padding-right: 51px;
+  text-align: center;
   text-transform: uppercase;
+  padding-top: 42px;
 }
 
 .form__checkbox-list {
@@ -72,6 +73,10 @@
   line-height: 18px;
   color: $accent;
   text-transform: uppercase;
+  text-align: center;
+  padding-left: 41px;
+  padding-right: 41px;
+  padding-top: 40px;
 }
 
 .form__radio {
@@ -92,6 +97,9 @@
   line-height: 18px;
   color: $accent;
   text-transform: uppercase;
+  margin: 0;
+  padding-top: 42px;
+  text-align: center;
 }
 
 .form__review-desc {
@@ -101,15 +109,17 @@
   color: #283645;
 }
 
-
 .form__review-textarea {
   width: 276px;
   height: 197px;
   border: 2px solid #e5e5e5;
   border-radius: 2px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  margin-left: 22px;
+  margin-right: 22px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
 }
 
 .form__button-send {
@@ -126,4 +136,7 @@
   font-size: 18px;
   line-height: 30px;
   border-radius: 2px;
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
 }
