--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,22 +1,21 @@
-/* stylelint-disable */
-@use "../../node_modules/normalize.css/normalize.css";
-
 @import "common/variables.scss";
 @import "common/visually-hidden.scss";
 
-@import "includes/page.scss";
-@import "includes/page-header.scss";
-@import "includes/main-nav.scss";
-@import "includes/page-main.scss";
-@import "includes/text.scss";
-@import "includes/desc.scss";
-@import "includes/slider-review.scss";
-@import "includes/table-slider.scss";
-@import "includes/contacts.scss";
-@import "includes/page-footer.scss";
-@import "includes/competition.scss";
-@import "includes/form.scss";
-@import "includes/important.scss";
-@import "includes/galery.scss";
-@import "includes/newphoto.scss";
-/* stylelint-enable */
+@import "blocks/page.scss";
+@import "blocks/page-header.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/page-main.scss";
+@import "blocks/text.scss";
+@import "blocks/desc.scss";
+@import "blocks/slider-review.scss";
+@import "blocks/table-slider.scss";
+@import "blocks/contacts.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/competition.scss";
+@import "blocks/form.scss";
+@import "blocks/important.scss";
+@import "blocks/galery.scss";
+@import "blocks/newphoto.scss";
+
+/*Global*/
+@import "global/normalize";
