--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,12 +1,67 @@
 .page-header {
   background-color: #283645;
-  cursor: pointer;
   color: #ffffff;
   border: none;
 }
 
+@media (min-width: $desktop-width){
+  .page-header {
+    display:flex;
+    
+    background-color: #000000;
+    opacity: 0.3;
+  }
+}
+
+.page-header__nav {
+  height: 66px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  @media (min-width: $tablet-width) {
+    height: 110px;
+  }
+
+  @media (min-width: $desktop-width) {
+    height: 110px;
+  }
+}
+
 .page-header__logo {
   margin: 0;
-  padding-left: 20px;
-  padding-top: 24px;
+  position: relative;
+  left: 20px;
+  top: 20px;
+  width: 74px;
+  height: 23px;
+  background-repeat: no-repeat;
+  background-image:url("..//img/pinklogo.svg");
+
+  @media (min-width: $tablet-width) {
+    background-image:url("..//img/logotablet.svg");
+    width: 145px;
+    height: 40px;
+    position: relative;
+    left: 20px;
+    top: 27px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+    left: 130px;
+    top: 27px;
+  }
+}
+
+.page-header__toggle {
+  background-color: #283645;
+  color: #ffffff;
+  border: none;
+}
+
+@media (min-width: $desktop-width){
+  .page-header__toggle {
+    display:none;
+  }
 }
