--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,13 +1,27 @@
-.page-header__nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+@media (min-width: $desktop-width){
+  .main-nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: auto;
+
+  }
 }
 
-.page-header__toggle {
-  background-color: #283645;
-  color: #ffffff;
-  border: none;
+.main-nav__list {
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+
+}
+
+@media (min-width: $desktop-width){
+  .main-nav__list{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 
 .site-list__item {
@@ -20,8 +34,12 @@
   }
 }
 
-.main-nav__list {
-  text-align: center;
-  padding: 0;
-  list-style: none;
+@media (min-width: $desktop-width){
+  .site-list__item
+    a {
+    padding-right: 78px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 18px;
+  }
 }
