--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -6,7 +6,7 @@
   font-family: "Open Sans", sans-serif;
   background-position: top center;
   min-height: 100%;
-  width: 320px;
+  // width: 320px;
   margin: 0 auto;
   height: auto;
 }
