--- a/source/sass/blocks/desc.scss
+++ b/source/sass/blocks/desc.scss
@@ -6,6 +6,19 @@
   background-color: #f2f2f2;
 }
 
+@media (min-width: $tablet-width) {
+  .desc{
+    display: grid;
+    grid-template-columns: 268px 1fr;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .desc__wrap{
+    order: 1;
+  }
+}
+
 .desc__title {
   color: #000000;
   font-weight: 700;
