--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -37,9 +37,8 @@
   justify-content: space-around;
 }
 
-.page-main__wrap{
-  outline: 2px solid rgb(255, 94, 0);
-}
+// .page-main__wrap{
+// }
 
 @media (min-width: $tablet-width) {
   .page-main__wrap{
