--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -25,10 +25,16 @@
 .site-list__item {
   a {
     text-decoration: none;
-    color: #ffffff;
+    color: $white;
     font-weight: 700;
     font-size: 18px;
     line-height: 32px;
+    box-shadow: 0px 1px 0px #000000, inset 0px 1px 0px rgba(255, 255, 255, 0.15);
+    display: flex;
+    flex-direction: column;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    text-transform: uppercase;
   }
 }
 
@@ -39,6 +45,11 @@
       font-weight: 400;
       font-size: 18px;
       line-height: 18px;
+      text-transform: none;
+      box-shadow: none;
+      color: $white ;
+      opacity: none;
+      position: relative;
     }
   }
 }
