--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,8 +1,3 @@
-.page-main__img {
-  position: relative;
-  top: 4px;
-}
-
 .page-main__operating {
   background-color: #1d2631;
   display: flex;
@@ -12,8 +7,26 @@
   padding-right: 20px;
 }
 
-.page-main__download {
+@media (min-width: $tablet-width) {
+  .page-main__operating {
+    position: absolute;
+    margin-top: 320px;
+    width: 300px;
+    display: flex;
+    background-color: #1d263100;
+  }
+}
 
+@media (min-width: $desktop-width) {
+  .page-main__operating {
+    position: absolute;
+    margin-top: 408px;
+    width: 300px;
+    padding-left: 130px;
+  }
+}
+
+.page-main__download {
   color: $white;
   line-height: 18px;
   text-decoration: none;
@@ -21,7 +34,7 @@
   flex-direction: row;
   justify-content: center;
   margin-top: 49px;
-  margin-bottom: 59px;
+  margin-bottom: 51px;
   padding-top: 21px;
   padding-bottom: 21px;
   text-align: center;
@@ -39,35 +52,93 @@
 
 @media (min-width: $tablet-width) {
   .page-main__wrap {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    width: auto;
+    height: 729px;
   }
 }
 
-.page-main__wraper {
+.page-main__wrap {
   background-image: url("..//img/backmobile.jpg");
+  width: auto;
 }
 
 @media (min-width: $tablet-width) {
-  .page-main__wraper {
+  .page-main__wrap {
     background-image: url("..//img/backtablet.jpg");
-    order: 2;
+    width: auto;
+    height: 729px;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .page-main__wraper {
+  .page-main__wrap {
     background-image: url("..//img/backdesktop.jpg");
+    width: auto;
+    height: 853px;
   }
 }
+
+
+.page-main__img {
+  position: relative;
+  left: -79px;
+  top: 3px;
+}
+
+@media (min-width: $tablet-width) {
+  .page-main__img {
+    position: relative;
+    top: 184px;
+    width: 593px;
+    left: -146px;
+    height: 545px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-main__img {
+    position: relative;
+    width: 1050px;
+    height: 645px;
+    top: 208px;
+    left: -91px;
+  }
+}
+
 
 .page-main__title {
   font-weight: 300;
   color: $white;
+  font-size: 24px;
   line-height: 29px;
   margin: 0;
   text-align: center;
   padding-top: 95px;
+  padding-bottom: 34px;
+}
+
+@media (min-width: $tablet-width) {
+  .page-main__title {
+    left: 68px;
+    font-weight: 300;
+    font-size: 40px;
+    line-height: 48px;
+    position: relative;
+    top: 103px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-main__title {
+    font-weight: 300;
+    font-size: 50px;
+    line-height: 68px;
+    padding-left: 120px;
+    position: relative;
+    left: 9px;
+    top: 112px;
+  }
 }
 
 .page-main__desc {
@@ -78,4 +149,12 @@
   margin-top: 31px;
   margin-bottom: 38px;
   text-align: center;
+}
+
+@media (min-width: $tablet-width) {
+  .page-main__desc {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 24px;
+  }
 }
