--- a/source/sass/blocks/slider-review.scss
+++ b/source/sass/blocks/slider-review.scss
@@ -1,9 +1,15 @@
+.slider-review {
+  background-color: $white;
+  padding-top: 109px;
+}
+
 .slider-review__title {
   color: #000000;
   font-weight: 700;
   font-size: 18px;
   line-height: 30px;
   text-align: center;
+  margin: 0;
 }
 
 .slider-review__subtitle {
