--- a/source/sass/blocks/text.scss
+++ b/source/sass/blocks/text.scss
@@ -13,3 +13,19 @@
   padding-top: 46px;
   text-align: center;
 }
+
+@media (min-width: $tablet-width) {
+  .text__desc {
+    font-weight: 300;
+    font-size: 40px;
+    line-height: 54px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .text__desc {
+    font-weight: 300;
+    font-size: 50px;
+    line-height: 68px;
+  }
+}
