--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,6 +9,7 @@
 @import "blocks/page-main.scss";
 @import "blocks/text.scss";
 @import "blocks/desc.scss";
+@import "blocks/study.scss";
 @import "blocks/slider-review.scss";
 @import "blocks/table-slider.scss";
 @import "blocks/contacts.scss";
