--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -29,7 +29,8 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 32px;
-    box-shadow: 0px 1px 0px #000000, inset 0px 1px 0px rgba(255, 255, 255, 0.15);
+    box-shadow: 0px 1px 0px #000000;
+    inset:0px 1px 0px rgba(255, 255, 255, 0.15);
     display: flex;
     flex-direction: column;
     padding-top: 25px;
@@ -47,7 +48,7 @@
       line-height: 18px;
       text-transform: none;
       box-shadow: none;
-      color: $white ;
+      color: $white;
       opacity: none;
       position: relative;
     }
