Поправка сетки главной страниы

--- a/source/sass/blocks/desc.scss
+++ b/source/sass/blocks/desc.scss
@@ -15,6 +15,14 @@
     display: flex;
     flex-direction: row-reverse;
     background-size: auto;
+    background-repeat: no-repeat;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .desc{
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
 
@@ -28,12 +36,36 @@
   padding-left: 20px;
 }
 
+@media (max-width: $desktop-width){
+  .desc__img1,
+  .desc__img2{
+    display: none;
+  }
+
+}
+
+
 @media (min-width: $tablet-width) {
-  .desc__img {
+  .desc__img3 {
     height: 547px;
     width: 268px;
     position: relative;
     top: 10px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .desc__img3{
+    width: 165px;
+    height: 294px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .desc__feature{
+    display: flex;
+    flex-direction: row;
+    background-color: $gray;
   }
 }
 
@@ -55,6 +87,14 @@
   }
 }
 
+@media (min-width: $desktop-width) {
+  .desc__title{
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 30px;
+  }
+}
+
 .desc__subtitle {
   color: #283645;
   font-weight: 400;
@@ -69,5 +109,14 @@
     padding-top: 20px;
     padding-left: 42px;
     text-align: left;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .desc__subtitle {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    color: $blue;
   }
 }
