--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -49,3 +49,23 @@
   top: 39px;
   height: 123px;
 }
+
+.contacts__map {
+  width: 100%;
+  height: 200px;
+}
+
+@media (min-width: $tablet-width) {
+  .contacts__map {
+    width: 100%;
+    height: 374px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .contacts__map{
+    width: 100%;
+    height: 502px;
+  }
+}
+
