--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -59,13 +59,21 @@
 }
 
 .page-header__toggle {
-  background-color: #283645;
-  color: #ffffff;
+  display: block;
+  font-size: 0;
+  background-color: $blue;
+  background-image: url("img/closemenubtn.svg");
   border: none;
 }
+
 
 @media (min-width: $desktop-width) {
   .page-header__toggle {
     display: none;
   }
+}
+
+.page-header__button {
+  padding-right: 20px;
+  padding-top: 20px;
 }
