--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -10,6 +10,12 @@
   text-align: center;
 }
 
+@media (min-width: $tablet-width) {
+  .contacts__wraper {
+    display: grid;
+  }
+}
+
 .contacts__title {
   color: #080808;
   font-weight: 700;
@@ -43,3 +49,23 @@
   top: 39px;
   height: 123px;
 }
+
+.contacts__map {
+  width: 100%;
+  height: 200px;
+}
+
+@media (min-width: $tablet-width) {
+  .contacts__map {
+    width: 100%;
+    height: 374px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .contacts__map{
+    width: 100%;
+    height: 502px;
+  }
+}
+
