--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -1,2 +1,13 @@
+// Colors
+
 $white: #ffffff;
 $accent: #d22856;
+$blue: #283645;
+$gray: #f2f2f2;
+
+
+// Viewports
+
+$mobile-width-only: 659px;
+$tablet-width: 660px;
+$desktop-width: 1200px;
